<resources>
    <string name="app_name">SchedulerApp</string>
    <string name="drawer_title">Main Title</string>
    <string name="content_text_drawer_layout">content_text_drawer_layout</string>
    <string name="scheduler">Scheduler</string>
    <string name="homework_text_item_menu">Homework</string>
    <string name="search_item_menu">Search</string>
    <string name="filter_item_menu">Filter</string>
    <string name="profile_item_menu">Profile</string>
    <string name="home_bottom_app_bar">Home</string>
    <string name="classes_bottom_app_bar">Classes</string>
    <string name="chip_item_home">Home</string>
    <string name="chip_item_classes">Classes</string>
    <string name="chip_item_tasks">Tasks</string>
    <string name="chip_item_favorite">Favorite</string>
    <string name="homework_title_of_block">Homework</string>
    <string name="minutes_title_of_watchers">Minutes</string>
    <string name="hours_title_of_watchers">Hours</string>
    <string name="days_title_of_watcher">Days</string>
    <string name="time_divider_watcher">:</string>
</resources>